cmake_minimum_required(VERSION 3.9)
project(tencent)

set(CMAKE_CXX_STANDARD 11)

add_executable(untitled main.cpp)
add_executable(T01 T1/T1.cpp Output.cpp)
add_executable(T02 T1/T2.cpp Output.cpp)
add_executable(T03 T1/T3.cpp Output.cpp)
add_executable(T04 T1/T4.cpp Output.cpp)
add_executable(T05 T1/T5.cpp Output.cpp)
add_executable(T06 T1/T6.cpp Output.cpp)
add_executable(T07 T1/T7.cpp Output.cpp)
add_executable(T08 T1/T8.cpp Output.cpp)
add_executable(T09 T1/T9.cpp Output.cpp)
add_executable(T10 T1/T10.cpp Output.cpp)
add_executable(T11 T1/T11.cpp Output.cpp)
add_executable(T12 T1/T12.cpp Output.cpp)
add_executable(T13 T1/T13.cpp Output.cpp)
add_executable(T14 T1/T14.cpp Output.cpp)
add_executable(T15 T1/T15.cpp Output.cpp)
add_executable(T16 T1/T16.cpp Output.cpp)
add_executable(T17 T1/T17.cpp Output.cpp)
add_executable(T18 T1/T18.cpp Output.cpp)