cmake_minimum_required(VERSION 3.9)
project(tencent)

set(CMAKE_CXX_STANDARD 11)
#add_executable(main main.cpp)
#add_executable(testCase testCase.cpp Output.cpp)
add_executable(testDemo testDemo.cpp Output.cpp)
#add_executable(Create Create.cpp Output.cpp)


#add_executable(T1_01 T1/T1.cpp Output.cpp)
#add_executable(T1_02 T1/T2.cpp Output.cpp)
#add_executable(T1_03 T1/T3.cpp Output.cpp)
#add_executable(T1_04 T1/T4.cpp Output.cpp)
#add_executable(T1_05 T1/T5.cpp Output.cpp)
#add_executable(T1_06 T1/T6.cpp Output.cpp)
#add_executable(T1_07 T1/T7.cpp Output.cpp)
#add_executable(T1_08 T1/T8.cpp Output.cpp)
#add_executable(T1_09 T1/T9.cpp Output.cpp)
#add_executable(T1_10 T1/T10.cpp Output.cpp)
#add_executable(T1_11 T1/T11.cpp Output.cpp)
#add_executable(T1_12 T1/T12.cpp Output.cpp)
#add_executable(T1_13 T1/T13.cpp Output.cpp)
#add_executable(T1_14 T1/T14.cpp Output.cpp)
#add_executable(T1_15 T1/T15.cpp Output.cpp)
#add_executable(T1_16 T1/T16.cpp Output.cpp)
#add_executable(T1_17 T1/T17.cpp Output.cpp)
#add_executable(T1_18 T1/T18.cpp Output.cpp)

add_executable(T2_01 T2/T1.cpp Output.cpp)
add_executable(T2_02 T2/T2.cpp Output.cpp)
add_executable(T2_03 T2/T3.cpp Output.cpp)
add_executable(T2_04 T2/T4.cpp Output.cpp)
add_executable(T2_05 T2/T5.cpp Output.cpp)
add_executable(T2_06 T2/T6.cpp Output.cpp)
add_executable(T2_07 T2/T7.cpp Output.cpp)
add_executable(T2_08 T2/T8.cpp Output.cpp)
add_executable(T2_09 T2/T9.cpp Output.cpp)

#add_executable(T3_01 T3/T1.cpp Output.cpp)
#add_executable(T3_02 T3/T2.cpp Output.cpp)
#add_executable(T3_03 T3/T3.cpp Output.cpp)
#add_executable(T3_04 T3/T4.cpp Output.cpp)
#add_executable(T3_05 T3/T5.cpp Output.cpp)
#
add_executable(T4_01 T4/T1.cpp Output.cpp)
add_executable(T4_02 T4/T2.cpp Output.cpp)
add_executable(T4_03 T4/T3.cpp Output.cpp)
add_executable(T4_04 T4/T4.cpp Output.cpp)
add_executable(T4_05 T4/T5.cpp Output.cpp)
add_executable(T4_06 T4/T6.cpp Output.cpp)
add_executable(T4_07 T4/T7.cpp Output.cpp)
add_executable(T4_08 T4/T8.cpp Output.cpp)
#
#add_executable(T5_01 T5/T1.cpp Output.cpp)
#add_executable(T5_02 T5/T2.cpp Output.cpp)
#add_executable(T5_03 T5/T3.cpp Output.cpp)
#add_executable(T5_04 T5/T4.cpp Output.cpp)
#
#add_executable(T6_01 T6/T1.cpp Output.cpp)
#add_executable(T6_02 T6/T2.cpp Output.cpp)
#add_executable(T6_03 T6/T3.cpp Output.cpp)
#add_executable(T6_04 T6/T4.cpp Output.cpp)
#add_executable(T6_05 T6/T5.cpp Output.cpp)
#add_executable(T6_06 T6/T6.cpp Output.cpp)
#
#add_executable(T7_01 T7/T1.cpp Output.cpp)
#add_executable(T7_02 T7/T2.cpp Output.cpp)
#
#add_executable(T8_01 T8/T1.cpp Output.cpp)